<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.mwb1219</groupId>
    <artifactId>mwb-ai-claw-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>mwb-ai-claw</name>
    <description>mwb-ai-claw: 一个 AI 原生智能体框架，自动编排 LLM、工具调用、记忆与多智能体协作（Multi-Agent Collaboration）。</description>
    <url>https://github.com/mwb1219/mwb-ai-claw</url>

    <properties>
        <!-- 统一版本号：全模块共享，升级时仅修改此处的 revision -->
        <revision>1.0.2-SNAPSHOT</revision>

        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- 示例模块（start / example-embed）私有属性覆盖为 true，避免误发布 -->

        <spring-boot.version>2.7.2</spring-boot.version>
        <!-- 覆盖 Lombok 版本以兼容 JDK 21 及新版语言服务器编译器（1.18.30 会触发 lombok.javac.Javac 初始化失败） -->
        <lombok.version>1.18.46</lombok.version>
    </properties>

    <modules>
        <module>mwb-ai-claw-client</module>
        <module>mwb-ai-claw-adapter</module>
        <module>mwb-ai-claw-app</module>
        <module>mwb-ai-claw-domain</module>
        <module>mwb-ai-claw-infrastructure</module>
        <module>mwb-ai-claw-spring-boot-starter</module>
        <module>example-embed</module>
        <module>example-web</module>
        <module>example-commerce</module>
        <module>start</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <!-- 版本由 dependencyManagement 统一管理（覆盖 BOM 默认，见下） -->
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!--Project modules-->
            <dependency>
                <groupId>io.github.mwb1219</groupId>
                <artifactId>mwb-ai-claw-adapter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.mwb1219</groupId>
                <artifactId>mwb-ai-claw-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.mwb1219</groupId>
                <artifactId>mwb-ai-claw-app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.mwb1219</groupId>
                <artifactId>mwb-ai-claw-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.mwb1219</groupId>
                <artifactId>mwb-ai-claw-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.mwb1219</groupId>
                <artifactId>mwb-ai-claw-spring-boot-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--Project modules End-->

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- 覆盖 Lombok 版本以兼容 JDK 21 及新版语言服务器编译器（1.18.30 会触发 lombok.javac.Javac 初始化失败） -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- 在 install/deploy 时将 ${revision} 解析为真实版本号，避免发布 POM 残留 ${revision} -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- 发布准备：所有模块生成源码 / javadoc 附件（供部署到 Maven 仓库使用） -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <!-- 既有注释含未转义 HTML（如 <sessionId>、&&），关闭 doclint 避免 JDK21 严格校验报错 -->
                            <doclint>none</doclint>
                            <failOnError>false</failOnError>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- 发布到 Maven Central 必需：GPG 签名（verify 阶段生成 .asc 文件） -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Central Portal 官方发布插件：mvn deploy 打包为 staging bundle 上传（manual publish，见
                 https://central.sonatype.com/publishing/deployments） -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.9.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <!-- central-publishing-maven-plugin 不识别 maven.deploy.skip，示例/启动器模块按 artifactId 排除 -->
                    <excludeArtifacts>
                        <excludeArtifact>start</excludeArtifact>
                        <excludeArtifact>example-embed</excludeArtifact>
                        <excludeArtifact>example-web</excludeArtifact>
                        <excludeArtifact>example-commerce</excludeArtifact>
                    </excludeArtifacts>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
                <plugin>
                     <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>mwb1219</id>
            <name>mwb1219</name>
            <email>mwb1219@users.noreply.github.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/mwb1219/mwb-ai-claw.git</connection>
        <developerConnection>scm:git:git@github.com:mwb1219/mwb-ai-claw.git</developerConnection>
        <url>https://github.com/mwb1219/mwb-ai-claw</url>
        <tag>HEAD</tag>
    </scm>

    <!-- 发布到 Maven Central（Central Portal）：mvn deploy 由 central-publishing-maven-plugin 接管打包上传，
         凭据见 ~/.m2/settings.xml 的 central server（Central User Token） -->
</project>
